# agent-sandbox

./: .gitignore  LICENSE  Makefile  README.md  README.ssh.md  pyproject.toml
docs/: AGENT_TESTING_PROMPT.md  BASELINE_TEST_PLAN.md  test-plan.md
src/agent_sandbox/: __init__.py  __main__.py  cli.py  debug.py  generator.py
tests/: README.md  __init__.py  agent_commands.py  conftest.py  test_agent_baseline.py  test_prohibited_operations.py
