[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sandbox"
version = "0.1.0"
description = "Sandbox wrapper for AI agents and automation tools using macOS Seatbelt"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alan Chan", email = "chingyichan.tw@gmail.com"}
]
keywords = ["ai", "agent", "sandbox", "security", "macos", "seatbelt", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/qty-playground/agent-sandbox"
Repository = "https://github.com/qty-playground/agent-sandbox"
Issues = "https://github.com/qty-playground/agent-sandbox/issues"

[project.scripts]
agbox = "agent_sandbox.cli:main"
agbox-debug = "agent_sandbox.debug:main"
generate-sandbox-profile = "agent_sandbox.generator:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_sandbox = ["py.typed"]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-timeout>=2.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-x",
    "--strict-markers",
    "--tb=short",
]
markers = []
timeout = 60
